--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <meta name="keywords" content="business ideas, market research, SaaS validation, startup opportunities, AI market intelligence" />
     <meta name="author" content="Market Muse" />
 
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Market Muse - Discover Untapped Business Ideas Before Anyone Else" />
     <meta property="og:description" content="AI-powered market intelligence that finds high-demand, low-competition SaaS opportunities from Reddit, LinkedIn & the web. Join 5,000+ entrepreneurs." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/dashboard-preview.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@MarketMuse" />
+    <meta name="twitter:title" content="Market Muse - Discover Untapped Business Ideas Before Anyone Else" />
+    <meta name="twitter:description" content="AI-powered market intelligence that finds high-demand, low-competition SaaS opportunities from Reddit, LinkedIn & the web." />
+    <meta name="twitter:image" content="/dashboard-preview.png" />
   </head>
 
   <body>
@@ -23,3 +27,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
