--- a/index.html
+++ b/index.html
@@ -4,22 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Market Muse - Discover Untapped Business Ideas Before Anyone Else</title>
-    <meta name="description" content="AI-powered market intelligence that scrapes Reddit, LinkedIn & the web to find high-demand, low-competition SaaS ideas. Join 5,000+ entrepreneurs getting early access." />
-    <meta name="keywords" content="business ideas, market research, SaaS validation, startup opportunities, AI market intelligence" />
+    <meta
+      name="description"
+      content="AI-powered market intelligence that scrapes Reddit, LinkedIn & the web to find high-demand, low-competition SaaS ideas. Join 5,000+ entrepreneurs getting early access."
+    />
+    <meta
+      name="keywords"
+      content="business ideas, market research, SaaS validation, startup opportunities, AI market intelligence"
+    />
     <meta name="author" content="Market Muse" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Market Muse - Discover Untapped Business Ideas Before Anyone Else" />
-    <meta property="og:description" content="AI-powered market intelligence that finds high-demand, low-competition SaaS opportunities from Reddit, LinkedIn & the web. Join 5,000+ entrepreneurs." />
+    <meta
+      property="og:title"
+      content="Market Muse - Discover Untapped Business Ideas Before Anyone Else"
+    />
+    <meta
+      property="og:description"
+      content="AI-powered market intelligence that finds high-demand, low-competition SaaS opportunities from Reddit, LinkedIn & the web. Join 5,000+ entrepreneurs."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/dashboard-preview.png" />
+    <meta
+      property="og:image"
+      content="https://land-wine.vercel.app/dashboard-preview.png?v=2"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@MarketMuse" />
-    <meta name="twitter:title" content="Market Muse - Discover Untapped Business Ideas Before Anyone Else" />
-    <meta name="twitter:description" content="AI-powered market intelligence that finds high-demand, low-competition SaaS opportunities from Reddit, LinkedIn & the web." />
-    <meta name="twitter:image" content="/dashboard-preview.png" />
+    <meta
+      name="twitter:title"
+      content="Market Muse - Discover Untapped Business Ideas Before Anyone Else"
+    />
+    <meta
+      name="twitter:description"
+      content="AI-powered market intelligence that finds high-demand, low-competition SaaS opportunities from Reddit, LinkedIn & the web."
+    />
+    <meta
+      name="twitter:image"
+      content="https://land-wine.vercel.app/dashboard-preview.png?v=2"
+    />
   </head>
 
   <body>
@@ -27,4 +51,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
